--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div id = "bloc_page">
             <h1>Gando Diallo</h1>
             <img src="images/gando.jpg" alt = "My photo">
-            <p>
+            <p class = "home-paragraphe">
                 I am passionate about computer programming. 
                 I like to turn what I see around me into a computer 
                 application for an easier world.<br>
