Add the informations for education and training

--- a/index.html
+++ b/index.html
@@ -6,15 +6,38 @@
     </head>
     <body>
         <div id = "bloc_page">
-            <h1>Gando Diallo</h1>
-            <img src="images/gando.jpg" alt = "My photo">
-            <p class = "home-paragraphe">
-                I am passionate about computer programming. 
-                I like to turn what I see around me into a computer 
-                application for an easier world.<br>
-                Any thought can be transformed into code which the
-                computer understands and materializes into an application.
-            </p>
+            <header>
+                <h1>Gando Diallo</h1>
+                <img src="images/gando.jpg" alt = "My photo">
+            </header>
+
+             <div>
+                <p class = "home-paragraphe">
+                    I am passionate about computer programming. 
+                    I like to turn what I see around me into a computer 
+                    application for an easier world.<br>
+                    Any thought can be transformed into code which the
+                    computer understands and materializes into an application.
+                </p>
+            </div>
+
+            <ul>
+                <h2>Education and Training</h2>
+                <li>
+                    February to March 2020 : 
+                    java training course at <a href="#">Circolo Ratataplan</a>
+                </li>
+                <li>
+                    January 2020: MySQL online certification on <a href="#">Openclassrooms</a>
+                </li>
+                <li>
+                    September 2019 to December 2019: Online certification in PHP on <a href="#">Openclassrooms</a>
+                </li>
+                <li>
+                    July 2019: Online Cetification in HTML5 and CSS3 on <a href="#">Openclassrooms</a>
+                </li>
+            </ul>
+
         </div>
     </body>
 </html>
